Hide thumbnails on mobile to fix broken layout

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1145,6 +1145,14 @@ footer p + p {
     padding: 0.7rem 0.9rem;
   }
 
+  .event-thumb {
+    display: none;
+  }
+
+  .event-with-thumb {
+    display: block;
+  }
+
   .event-time {
     font-size: 0.9rem;
   }
